# production-test-framework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  __init__.py  config.py  env.example  helper.py  k8s.py  pyproject.toml  ssh.py  vllm.py
.github/workflows/: docker.yml  test.yml
ansible/: site.yml
ansible/roles/k3s/handlers/: main.yml
ansible/roles/k3s/tasks/: main.yml
loadgen/: __init__.py
locust/: __init__.py  locust_user.py
manifests/: alloy-service.yaml
profiler/: docker-compose.yml
scripts/: docker-entrypoint.sh  launch_framework.sh  launch_framework.sh.example
src/production_test_framework/: __init__.py  helper.py  k8s.py  ssh.py
src/production_test_framework/switch/: exceptions.py  models.py  network_switch.py  port_sort.py  switch_status.py
src/production_test_framework/switch/nvidia/: nvidia_cumulus_switch.py  nvue_paths.py
src/production_test_framework/telemetry/: otelp.py
src/production_test_framework/utils/: __init__.py
src/production_test_framework/workload/: inferencex_workload.py  prompt_workload.py  workload.py
telemetry/: __init__.py  otelp.py
tests/: pyproject.toml  test_helper.py  test_k8s.py  test_ssh.py  test_vllm.py  test_workload.py
unit_tests/: conftest.py  pyproject.toml  test_config.py  test_helper.py  test_k8s.py  test_otelp.py  test_ssh.py  test_switch_display.py  test_switch_nvidia_ports.py  test_switch_nvidia_vlans.py  test_switch_port_sort.py  test_vllm.py  test_workload.py
unit_tests/fixtures/switch/: nvue_bridge_vlans.json  nvue_interfaces_bridge.json  nvue_interfaces_description.json
utils/: polling.py
workload/: inferencex_workload.py  prompt_workload.py  workload.py
