# SPDX-License-Identifier: FSL-1.1-ALv2
# Copyright (c) 2025 Delos Data, Inc.

[project]
name = "production-test-framework"
version = "0.1.0"
description = "Production test framework for k3s, LGTM stack, and integration testing"
readme = "README.md"
license = { text = "FSL-1.1-ALv2" }
requires-python = ">=3.14"
dependencies = [
    "ansible-core>=2.14",
    "paramiko>=3.0",
    "requests>=2.28",
    "locust>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
cache_dir = "/app/framework/.pytest_cache"
#log_cli = "true"
#log_cli_level = "INFO"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.workspace]
members = ["unit_tests", "tests"]
