# SPDX-License-Identifier: FSL-1.1-ALv2
# Copyright (c) 2025 Delos Data, Inc.

[project]
name = "production-test-framework"
dynamic = ["version"]
description = "Production test framework for k3s, LGTM stack, and integration testing"
readme = "README.md"
license = { text = "FSL-1.1-ALv2" }
requires-python = ">=3.14"
dependencies = [
    "docopt>=0.6.2",
    "ansible-core>=2.14",
    "paramiko>=3.0",
    "requests>=2.28",
    "locust>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "pytest>=7.0",
    "qase-pytest>=8.3.0",
]

[project.scripts]
ptf-switch = "production_test_framework.switch.switch_status:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/production_test_framework/_version.py"

[tool.pytest.ini_options]
cache_dir = "/app/framework/.pytest_cache"
#log_cli = "true"
#log_cli_level = "INFO"

[tool.hatch.build.targets.wheel]
packages = ["src/production_test_framework"]

[tool.uv.workspace]
members = ["unit_tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "unit_tests"]
exclude = [
    ".venv",
    "src/production_test_framework/_version.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["production_test_framework"]
