# SPDX-License-Identifier: FSL-1.1-ALv2
# Copyright (c) 2025 Delos Data, Inc.

[project]
name = "unit-tests"
version = "0.1.0"
description = "Unit test suite"
requires-python = ">=3.14"
dependencies = [
    "production-test-framework",
]

[tool.uv.sources]
production-test-framework = { workspace = true }

